--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.14,<4.0"
 dependencies = [
-    "fastapi[standard] (>=0.122.0,<0.123.0)"
+    "fastapi[standard] (>=0.122.0,<0.123.0)",
 ]
 
 
@@ -22,6 +22,9 @@ dev = [
     "pytest-cov (>=7.0.0,<8.0.0)",
     "taskipy (>=1.14.1,<2.0.0)",
     "ruff (>=0.14.6,<0.15.0)"
+]
+mqtt = [
+    "paho-mqtt (>=2.1.0,<3.0.0)"
 ]
 
 [tool.ruff]
