--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -6,9 +6,24 @@ authors = [
     {name = "AnnaBittencourt19",email = "bittencourtanna19@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14,<4.0"
+requires-python = ">=3.10.0,<3.15"
 dependencies = [
     "fastapi[standard] (>=0.122.0,<0.123.0)",
+    "langchain-huggingface (>=1.1.0,<2.0.0)",
+    "torch (>=2.9.1,<3.0.0)",
+    "transformers (>=4.57.3,<5.0.0)",
+    "sentencepiece (>=0.2.1,<0.3.0)",
+    "faiss-cpu (>=1.13.1,<2.0.0)",
+    "pymupdf (>=1.26.6,<2.0.0)",
+    "numpy (>=2.1.0,<3.0.0)",
+    "sentence-transformers (>=5.2.0,<6.0.0)",
+    "langchain (>=1.1.3,<2.0.0)",
+    "nltk (>=3.9.2,<4.0.0)",
+    "rank-bm25 (>=0.2.2,<0.3.0)",
+    "chromadb (>=1.3.6,<2.0.0)",
+    "langchain-core (>=1.1.3,<2.0.0)",
+    "langchain-community (>=0.4.1,<0.5.0)",
+    "langchain-chroma (>=1.0.0,<2.0.0)",
 ]
 
 
